--- a/style.css
+++ b/style.css
@@ -15,9 +15,13 @@ nav ul li{
   width:200px;
   background-color:#FFFFFF;
   border-radius:20px;
-  animation:cold 5s infinite linear;
+  animation:cold 10s infinite linear;
   border:4px solid black;
   box-shadow:0 0 20px 3px black;
+  transition:teansform 0.7s linear;
+}
+nav ul li:hover{
+  transform:scale(1.025);
 }
 nav li a{
   display:block;
@@ -25,12 +29,14 @@ nav li a{
   padding:8px 16px;
   text-decoration: none;
   border-radius:20px;
-  animation:cold 5s infinite linear;
+  animation:cold 10s infinite linear;
+  transition: transform 0.4s linear;
 }
 nav li a:hover{
   background-color:#156A5C;
   color:white;
   border-radius:20px;
+  transform:scale(1.2);
 }
 body {
   font-family: tektur;
@@ -67,7 +73,12 @@ body {
   object-fit: contain;
   max-height: 100%;
   max-width: 100%;
+  transition: transform 0.4s ease-in-out;
 }
+.logo img:hover{
+  transform:scale(1.2) rotate(360deg);
+}
+
 @keyframes cold {
   0% {background-color:#FFFFFF; color:#000000;}
   25% {background-color:#657C79; color:#606060;}
