--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ nav ul li{
 nav ul li:hover{
   transform:scale(1.025);
 }
+nav ul li:first-child{
+  border-radius:100%;
+}
 nav li a{
   display:block;
   color:#000000;
@@ -69,21 +72,22 @@ body {
 .logo img{
   height:60px;
   width:60px;
-  border-radius: 8px;
+  border-radius: 100%;
   object-fit: contain;
   max-height: 100%;
   max-width: 100%;
+  transform:scale(1.3);
   transition: transform 0.4s ease-in-out;
 }
 .logo img:hover{
-  transform:scale(1.2) rotate(360deg);
+  transform:scale(1.5) rotate(360deg);
 }
 
 @keyframes cold {
   0% {background-color:#FFFFFF; color:#000000;}
-  25% {background-color:#657C79; color:#606060;}
-  50% {background-color: #272D2C; color:#FFFFFF;}
-  75% {background-color:#657C79; color:#606060;}
+  25% {background-color:#7E7E7E; color:#606060;}
+  50% {background-color: #000000; color:#FFFFFF;}
+  75% {background-color:#7E7E7E; color:#606060;}
   110% {background-color:#FFFFFF; color:#000000;}
 
 }
