--- a/style.css
+++ b/style.css
@@ -49,15 +49,27 @@ body {
   background-image:url("bg2g.jpg");
   background-size:cover;
   background-repeat:no-repeat;
-  background-position:center center;
-  background-attachment:fixed;
+  background-position:center top;
+  background-attachment:scroll;
+  min-height: 200vh;
   margin:0;
   padding:0;
 }
 
+@media (max-width: 768px) {
+  body {
+    background-size:cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    overflow: hidden;
+  }
+}
 .headingone{
   font-size:80px; 
   text-align: center; 
+  
   font-weight: 7;
   color:black;
   text-decoration: none;
