--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ body {
   font-weight: 7;
   color:black;
   text-decoration: none;
+  margin-bottom: 15%;
+  margin-top:15%;
 }
 
 .headingone:hover{
@@ -109,3 +111,12 @@ body {
 
 }
 
+.transbox{
+  width:300px;
+  height:300px;
+  margin:0 auto;
+  margin-top:0px;
+  background-color:black;
+  opacity:0.5;
+  text-align: center;
+}
