--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ nav ul li{
   opacity:0.5;
   margin-left: 7px;
   margin-right:7px;
-  font-size: 40px;
+  font-size: 25px;
   display:block;
   width:200px;
+  height:50px;
+  padding:0;
   background-color:#FFFFFF;
   border-radius:20px;
   border:4px solid black;
@@ -22,6 +24,7 @@ nav ul li{
 }
 nav ul li:first-child{
   opacity:1;
+  height:75px;
 }
 nav ul li:hover{
   transform:scale(1.025);
